--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,8 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^6.2.2",
     "prettier": "^2.2.1",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "webpack-bundle-tracker": "^0.4.3"
   },
   "eslintConfig": {
     "root": true,
