--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ django-cors-headers==3.8.0
 django-registration==3.1.1
 django-rest-auth==0.9.5
 django-rest-framework==0.1.0
+django-utils-six==2.0
 django-webpack-loader==0.6.0
 djangorestframework==3.12.2
 idna==2.10
